# armadillo-code

./: .appveyor.yml  .arma.nuspec  .gitignore  CMakeLists.txt  NOTICE.txt  README.md  README.txt  arma.targets  armadillo.autopkg  docs.html  index.html
cmake_aux/Modules/: ARMA_FindARPACK.cmake  ARMA_FindOpenBLAS.cmake  ARMA_FindSuperLU5.cmake
examples/: Makefile  Makefile.cmake  example1.cpp  example1_win64.README.txt  example1_win64.sln  example1_win64.vcxproj
examples/lib_win64/: README.txt  blas_win64_MT.lib  lapack_win64_MT.lib
include/: armadillo
include/armadillo_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  CoMat_bones.hpp  CoMat_meat.hpp  Col_bones.hpp  Col_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  GenCube_bones.hpp  GenCube_meat.hpp  GenSpecialiser.hpp  Gen_bones.hpp  Gen_meat.hpp  GlueCube_bones.hpp  GlueCube_meat.hpp  Glue_bones.hpp  Glue_meat.hpp  MapMat_bones.hpp  MapMat_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  OpCube_bones.hpp  OpCube_meat.hpp  Op_bones.hpp  Op_meat.hpp  Proxy.hpp  ProxyCube.hpp  Row_bones.hpp  Row_meat.hpp  SizeCube_bones.hpp  SizeCube_meat.hpp  SizeMat_bones.hpp  SizeMat_meat.hpp  SpBase_bones.hpp  SpBase_meat.hpp  SpCol_bones.hpp  SpCol_meat.hpp  SpGlue_bones.hpp  (+488 more)
mex_interface/: README.txt  armaMex.hpp  armaMex_demo.cpp  readMatTest.cpp  run_demo.m
misc/: armadillo.pc.in  armadillo.spec  doxygen.config  main.doxy
src/: README.txt  wrapper.cpp
tests/: Makefile  README.txt  attributes.cpp  bounds.cpp  decomp_eig_gen.cpp  decomp_eig_sym.cpp  expr_elem.cpp  expr_misc.cpp  fn_abs.cpp  fn_accu.cpp  fn_all.cpp  fn_any.cpp  fn_as_scalar.cpp  fn_clamp.cpp  fn_cond.cpp  fn_conj.cpp  fn_conv.cpp  fn_conv_to.cpp  fn_cor.cpp  fn_cov.cpp  fn_cross.cpp  fn_cumprod.cpp  fn_cumsum.cpp  fn_det.cpp  fn_diagmat.cpp  fn_diagvec.cpp  fn_diff.cpp  fn_dot.cpp  fn_eigs_gen.cpp  fn_eigs_sym.cpp  fn_eps.cpp  fn_expmat.cpp  fn_find.cpp  fn_find_finite.cpp  fn_find_nonfinite.cpp  fn_find_unique.cpp  fn_flip.cpp  fn_interp1.cpp  fn_is_finite.cpp  fn_max.cpp  (+30 more)
